# Beginners

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  CodeOfConduct.md  LICENSE.md  Projects.py  README.md  README2.md  Scratchpad.md  Scratchpad2-md  ]  bazel-bin  build.rs  gnrt_config.toml  unsaved file 1
.github/workflows/: ci.yml  codeql.yml  ghpages.yml  openapi.yml
.gitlab/: ci.yml
Projects/: .gitignore
Projects/QMLAppl/: README.rst  README.ts
Projects/QMLAppl/docs/: references.rst
Projects/QMLAppl/env/: pyvenv.cfg
Projects/QMLAppl/qtrustapp/: Cargo.toml
Projects/RustAPI/: Cargo.toml
Projects/RustAPI/documents/: README.md  Scratchpad2.md
Projects/RustAPI/github/: deploy.yml
Projects/RustAPI/restful-rustapi/: Cargo.toml
Projects/RustWebApp/: .BUILD  .WORKSPACE  README.md
Projects/RustWebApp/Rust_WASM/: Cargo.toml  package.json
Projects/RustWebApp/Rust_WASM/src/: main.rs
Projects/RustWebApp/docs/: references.md
Projects/ToDoEmail/: README.md  package-lock.json  package.json
Projects/ToDoEmail/ToDoEmail/: Cargo.toml  README.md  index.html  styles.css
Projects/ToDoEmail/ToDoEmail/src/: app.rs  main.rs
Projects/ToDoEmail/ToDoEmail/src-tauri/: Cargo.toml  tauri.conf.json
Projects/ToDoEmail/todo_email_app/: Cargo.toml  README.md  build.rs  package-lock.json
Projects/ToDoEmail/todo_email_app/src/: main.rs
bazel-beginners/: Cargo.toml
bazel-beginners/.github/workflows/: ci.yml
bazel-beginners/.gitlab/: ci.yml
bazel-beginners/Projects/QMLAppl/: README.ts
bazel-beginners/Projects/QMLAppl/docs/: references.rst
bazel-beginners/Projects/RustWebApp/: .BUILD
bazel-beginners/Projects/RustWebApp/Rust_WASM/: Cargo.toml
bazel-out/: stable-status.txt  volatile-status.txt
docs/: AUTHORS.md  CONTRIBUTING.md  LICENSE.md  README.md
docs/AUTHORS/: AUTHORS.md
src/: main.rs
