# Cargo.toml

[package]
name = "Beginners"
version = "0.1.0"
edition = "2021"
authors = ["Kiyini Joseph Balamazze"]


[package]
name = "hello-from-generated-code"
version = "0.1.0"
edition = "2021"


[dependencies]
regex = { git = "https://github.com/rust-lang/regex.git" }
trunk = "0.20.3"
actix = { version = "0.13.3" }
chrono = "0.4"
futures = "0.3"
atk = "0.18.0" 
atk-sys = ">= 0.18.0" 