# Cargo toml

[package]
name = "Beginners"
version = "0.1.0"
edition = "2021"
authors = ["Kiyini Joseph Balamazze"]
build = "build.rs"


[dependencies]
# .git suffix can be omitted if the host accepts such URLs - both examples work the same

regex = { git = "https://github.com/rust-lang/regex" }
trunk = "0.20.3"
actix = { version = "0.13.3" }
chrono = "0.4"
futures = "0.3"
atk = ">0.17.0" 
atk-sys = ">= 0.18.0" 
cc = "1.1.20"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
The opt-level setting
time = "0.3.36"
tauri-build = "1.5.5"
