[package]
name = "Beginners"
version = "0.1.0"
edition = "2021"
authors = ["Kiyini Joseph Balamazze"]
build = "build.rs"


[dependencies]
regex = { git = "https://github.com/rust-lang/regex.git" }
trunk = "0.21.6"
actix = { version = "0.13.3" }
chrono = "0.4"
futures = "0.3"
atk = "2.28" 
atk-sys = ">= 2.28" 
cc = "1.1.20"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
time = "0.3.36"
tauri-build = "1.5.5"
