[package]
name = "Beginners"
version = "0.1.0"
edition = "2021"
authors = ["Kiyini Joseph Balamazze"]


[dependencies]
 "actix",
 "atk",
 "atk-sys",
 "chrono",
 "futures",
 "regex 1.10.4 (git+https://github.com/rust-lang/regex.git)",
 "trunk",
 "actix-macros",
 "actix-rt",
 "actix_derive",
 "bitflags 2.5.0",
 "bytes",
 "crossbeam-channel",
 "futures-core",
 "futures-sink",
 "futures-task",
 "futures-util",
 "log",
 "once_cell",
 "parking_lot",
 "pin-project-lite",
 "smallvec",
 "tokio",
 "tokio-util",
 "quote",
 "syn 2.0.57",
 "futures-core",
 "tokio",
 "proc-macro2",
 "quote",
 "syn 2.0.57",
 "gimli",
 "cfg-if",
 "cipher",
 "cpufeatures",
 "getrandom 0.2.12",
 "once_cell",
 "version_check",
 "cfg-if",
 "getrandom 0.2.12",
 "once_cell",
 "version_check",
 "zerocopy",
 "memchr",
 "memchr",
 "as-slice",
 "libc",
 "winapi",
 "anstyle",
 "anstyle-parse",
 "anstyle-query",
 "anstyle-wincon",
 "colorchoice",
 "utf8parse",
 "utf8parse",
 "windows-sys 0.52.0",
 "anstyle",
 "windows-sys 0.52.0",
 "stable_deref_trait",
 "proc-macro2",
 "quote",
 "syn 2.0.57",
 "proc-macro2",
 "quote",
 "syn 2.0.57",
 "atk-sys",
 "glib",
 "libc",
 "glib-sys",
 "gobject-sys",
 "libc",
 "system-deps",
 "async-trait",
 "axum-core",
 "base64",
 "bitflags 1.3.2",
 "bytes",
 "futures-util",
 "http",
 "http-body",
 "hyper",
 "itoa 1.0.11",
 "matchit",
 "memchr",
 "mime",
 "percent-encoding",
 "pin-project-lite",
 "rustversion",
 "serde",
 "serde_json",
 "serde_path_to_error",
 "serde_urlencoded",
 "sha1",
 "sync_wrapper",
 "tokio",
 "tokio-tungstenite",
 "tower",
 "tower-layer",
 "tower-service",
 "async-trait",
 "bytes",
 "futures-util",
 "http",
 "http-body",
 "mime",
 "rustversion",
 "tower-layer",
 "tower-service",
 "arc-swap",
 "bytes",
 "futures-util",
 "http",
 "http-body",
 "hyper",
 "pin-project-lite",
 "rustls",
 "rustls-pemfile",
 "tokio",
 "tokio-rustls",
 "tower-service",
 "addr2line",
 "cc",
 "cfg-if",
 "libc",
 "miniz_oxide",
 "object",
 "rustc-demangle",
 "simd-abstraction",
 "funty",
 "radium",
 "tap",
 "wyz",
 "generic-array",
 "bytecheck_derive",
 "ptr_meta",
 "simdutf8",
 "proc-macro2",
 "quote",
 "syn 1.0.109",
 "bzip2-sys",
 "libc",
 "cc",
 "libc",
 "pkg-config",
 "serde",
 "semver",
 "serde",
 "toml 0.7.8",
 "url",
 "serde",
 "camino",
 "cargo-platform",
 "semver",
 "serde",
 "serde_json",
 "thiserror",
 "jobserver",
 "libc",
 "smallvec",
 "target-lexicon",
 "android-tzdata",
 "iana-time-zone",
 "js-sys",
 "num-traits",
 "serde",
 "wasm-bindgen",
 "windows-targets 0.52.4",
 "crypto-common",
 "inout",
 "clap_builder",
 "clap_derive",
 "anstream",
 "anstyle",
 "clap_lex",
 "strsim",
 "terminal_size",
 "heck 0.5.0",
 "proc-macro2",
 "quote",
 "syn 2.0.57",
 "encode_unicode",
 "lazy_static",
 "libc",
 "unicode-width",
 "windows-sys 0.52.0",
 "const-str-proc-macro",
 "proc-macro2",
 "quote",
 "syn 1.0.109",
 "core-foundation-sys",
 "libc",
 "libc",
 "chrono",
 "futures",
 "reqwest",
 "serde",
 "serde_derive",
 "serde_json",
 "serde_path_to_error",
 "tokio",
 "url",
 "cfg-if",
 "crossbeam-utils",
 "crossbeam-epoch",
 "crossbeam-utils",
 "crossbeam-utils",



dependencies = [
 "actix",
 "atk",
 "atk-sys",
 "chrono",
 "futures",
 "regex 1.10.4 (git+https://github.com/rust-lang/regex.git)",
 "trunk",
 "actix-macros",
 "actix-rt",
 "actix_derive",
 "bitflags 2.5.0",
 "bytes",
 "crossbeam-channel",
 "futures-core",
 "futures-sink",
 "futures-task",
 "futures-util",
 "log",
 "once_cell",
 "parking_lot",
 "pin-project-lite",
 "smallvec",
 "tokio",
 "tokio-util",
 "quote",
 "syn 2.0.57",
 "futures-core",
 "tokio",
 "proc-macro2",
 "quote",
 "syn 2.0.57",
 "gimli",
 "cfg-if",
 "cipher",
 "cpufeatures",
 "getrandom 0.2.12",
 "once_cell",
 "version_check",
 "cfg-if",
 "getrandom 0.2.12",
 "once_cell",
 "version_check",
 "zerocopy",
 "memchr",
 "memchr",
 "as-slice",
 "libc",
 "winapi",
 "anstyle",
 "anstyle-parse",
 "anstyle-query",
 "anstyle-wincon",
 "colorchoice",
 "utf8parse",
 "utf8parse",
 "windows-sys 0.52.0",
 "anstyle",
 "windows-sys 0.52.0",
 "stable_deref_trait",
 "proc-macro2",
 "quote",
 "syn 2.0.57",
 "proc-macro2",
 "quote",
 "syn 2.0.57",
 "atk-sys",
 "glib",
 "libc",
 "glib-sys",
 "gobject-sys",
 "libc",
 "system-deps",
 "async-trait",
 "axum-core",
 "base64",
 "bitflags 1.3.2",
 "bytes",
 "futures-util",
 "http",
 "http-body",
 "hyper",
 "itoa 1.0.11",
 "matchit",
 "memchr",
 "mime",
 "percent-encoding",
 "pin-project-lite",
 "rustversion",
 "serde",
 "serde_json",
 "serde_path_to_error",
 "serde_urlencoded",
 "sha1",
 "sync_wrapper",
 "tokio",
 "tokio-tungstenite",
 "tower",
 "tower-layer",
 "tower-service",
 "async-trait",
 "bytes",
 "futures-util",
 "http",
 "http-body",
 "mime",
 "rustversion",
 "tower-layer",
 "tower-service",
 "arc-swap",
 "bytes",
 "futures-util",
 "http",
 "http-body",
 "hyper",
 "pin-project-lite",
 "rustls",
 "rustls-pemfile",
 "tokio",
 "tokio-rustls",
 "tower-service",
 "addr2line",
 "cc",
 "cfg-if",
 "libc",
 "miniz_oxide",
 "object",
 "rustc-demangle",
 "simd-abstraction",
 "funty",
 "radium",
 "tap",
 "wyz",
 "generic-array",
 "bytecheck_derive",
 "ptr_meta",
 "simdutf8",
 "proc-macro2",
 "quote",
 "syn 1.0.109",
 "bzip2-sys",
 "libc",
 "cc",
 "libc",
 "pkg-config",
 "serde",
 "semver",
 "serde",
 "toml 0.7.8",
 "url",
 "serde",
 "camino",
 "cargo-platform",
 "semver",
 "serde",
 "serde_json",
 "thiserror",
 "jobserver",
 "libc",
 "smallvec",
 "target-lexicon",
 "android-tzdata",
 "iana-time-zone",
 "js-sys",
 "num-traits",
 "serde",
 "wasm-bindgen",
 "windows-targets 0.52.4",
 "crypto-common",
 "inout",
 "clap_builder",
 "clap_derive",
 "anstream",
 "anstyle",
 "clap_lex",
 "strsim",
 "terminal_size",
 "heck 0.5.0",
 "proc-macro2",
 "quote",
 "syn 2.0.57",
 "encode_unicode",
 "lazy_static",
 "libc",
 "unicode-width",
 "windows-sys 0.52.0",
 "const-str-proc-macro",
 "proc-macro2",
 "quote",
 "syn 1.0.109",
 "core-foundation-sys",
 "libc",
 "libc",
 "chrono",
 "futures",
 "reqwest",
 "serde",
 "serde_derive",
 "serde_json",
 "serde_path_to_error",
 "tokio",
 "url",
 "cfg-if",
 "crossbeam-utils",
 "crossbeam-epoch",
 "crossbeam-utils",
 "crossbeam-utils",

